Removed hardcoded spring.datasource.username and spring.datasource.password   from application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,8 @@ spring.application.name=libraryManagementSysytemBackend
 
 # Database Configuration
 spring.datasource.url=jdbc:postgresql://localhost:5432/employee_device_tracking_system
-spring.datasource.username=postgres
-spring.datasource.password=sAtyAm@123
-
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASS}
 # Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
