--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
-spring.application.name=libraryManagementSysytemBackend
+spring.application.name=EmployeeDeviceTrackingSystemBackend
 
 # Database Configuration
 spring.datasource.url=jdbc:postgresql://localhost:5432/employee_device_tracking_system
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASS}
-
 # Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=update
+
+logging.file.name=logs/${spring.application.name}.log
 
