--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,15 @@
 spring.application.name=EmployeeDeviceTrackingSystemBackend
 
+logging.file.name=logs/${spring.application.name}.log
+
 # Database Configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/employee_device_tracking_system
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASS}
 # Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=update
 
-logging.file.name=logs/${spring.application.name}.log
+#Local Configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/employee_device_tracking_system
 
+#Docker Configuration
+#spring.datasource.url=jdbc:postgresql://host.docker.internal:5432/employee_device_tracking_system
